--- a/Request Refill/Windows/WindowSettings.xaml
+++ b/Request Refill/Windows/WindowSettings.xaml
@@ -183,7 +183,7 @@
 					</Border>
 
 					<Button Style="{DynamicResource ButtonCloseStyle}" Grid.Column="3" Click="ClickCloseWindow">
-						<Image Source="/Resources/X.png" Width="32"/>
+						<Image Source="/Resources/32/X.png" Width="32"/>
 					</Button>
 				</Grid>
 			</Border>
