--- a/Request Refill/Windows/WindowSettings.xaml
+++ b/Request Refill/Windows/WindowSettings.xaml
@@ -200,7 +200,7 @@
 						<ColumnDefinition/>
 					</Grid.ColumnDefinitions>
 					<TextBlock Grid.Column="0" Text="Кабинет" FontSize="16" FontFamily="{StaticResource Tex Gyre}" VerticalAlignment="Center"/>
-					<ComboBox Style="{DynamicResource ComboBoxStyle}" Grid.Column="1" Width="200" Height="32" Name="ComboboxCabinetSelect" FontFamily="{StaticResource Tex Gyre}" FontSize="16" DisplayMemberPath="CabinetName" SelectedValuePath="Идентификатор_сотрудника" SelectionChanged="ComboboxCabinetSelect_SelectionChanged"/>
+					<ComboBox Style="{DynamicResource ComboBoxStyle}" Grid.Column="1" Width="200" Height="32" Name="ComboboxCabinetSelect" FontFamily="{StaticResource Tex Gyre}" FontSize="16" DisplayMemberPath="CabinetName" SelectionChanged="ComboboxCabinetSelect_SelectionChanged"/>
 				</Grid>
 				<Grid Margin="10" Grid.Row="1">
 					<Grid.ColumnDefinitions>
@@ -208,7 +208,7 @@
 						<ColumnDefinition/>
 					</Grid.ColumnDefinitions>
 					<TextBlock Grid.Column="0" Text="От кого по умолчанию" FontSize="16" FontFamily="{StaticResource Tex Gyre}" VerticalAlignment="Center"/>
-					<ComboBox Style="{DynamicResource ComboBoxStyle}" Grid.Column="1" Width="200" Height="32" Name="ComboboxFromWhoDefaultSelect" FontFamily="{StaticResource Tex Gyre}" FontSize="16" DisplayMemberPath="FIO" SelectedValuePath="Employee_ID"/>
+					<ComboBox  Style="{DynamicResource ComboBoxStyle}" Grid.Column="1" Width="200" Height="32" Name="ComboboxFromWhoDefaultSelect" FontFamily="{StaticResource Tex Gyre}" FontSize="16" DisplayMemberPath="FIO"/>
 				</Grid>
 				<Grid Margin="10" Grid.Row="2">
 					<Grid.ColumnDefinitions>
@@ -216,7 +216,7 @@
 						<ColumnDefinition/>
 					</Grid.ColumnDefinitions>
 					<TextBlock Grid.Column="0" Text="Принтер по умолчанию" FontSize="16" FontFamily="{StaticResource Tex Gyre}" VerticalAlignment="Center"/>
-					<ComboBox Style="{DynamicResource ComboBoxStyle}" Grid.Column="1" Width="200" Height="32" Name="ComboboxPrinterDefaultSelect" FontFamily="{StaticResource Tex Gyre}" FontSize="16"/>
+					<ComboBox Style="{DynamicResource ComboBoxStyle}" Grid.Column="1" Width="200" Height="32" Name="ComboboxPrinterDefaultSelect" FontFamily="{StaticResource Tex Gyre}" FontSize="16" DisplayMemberPath="PrinterInfo"/>
 				</Grid>
 			</Grid>
 			
