--- a/Request Refill/Windows/WindowCreateRequestRefill.xaml
+++ b/Request Refill/Windows/WindowCreateRequestRefill.xaml
@@ -222,7 +222,7 @@
                     </Grid>
                     <Grid Margin="10" Grid.Column="1">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition />
+                            <ColumnDefinition/>
                             <ColumnDefinition Width="auto"/>
                         </Grid.ColumnDefinitions>
                         <TextBlock Grid.Column="0" Text="Принтер" FontSize="16" FontFamily="{StaticResource Tex Gyre}" VerticalAlignment="Center"/>
@@ -235,6 +235,12 @@
             <Border Grid.Row="3" BorderThickness="0,1,0,0" BorderBrush="#6980f7">
                 <Grid Margin="16,15,16,16">
                     <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="10"/>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="10"/>
                         <ColumnDefinition Width="auto"/>
                         <ColumnDefinition Width="10"/>
                         <ColumnDefinition Width="auto"/>
