--- a/Request Refill/Windows/WindowCreateRequestRefill.xaml
+++ b/Request Refill/Windows/WindowCreateRequestRefill.xaml
@@ -248,7 +248,7 @@
 
 					<Button Style="{DynamicResource ButtonSaveStyle}" Content="Подтвердить" Width="133" Height="39" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="0" FontFamily="{StaticResource Tex Gyre}" FontSize="16"/>
 					<Button Style="{DynamicResource ButtonCancelStyle}" Content="Отмена" Width="133" Height="39" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="2" FontFamily="{StaticResource Tex Gyre}" FontSize="16" Click="ClickCloseWindow"/>
-					<Button Content="Добавить запись" Grid.Column="8" Width="133" Height="39"/>
+					<Button Content="Добавить запись" Grid.Column="8" Width="133" Height="39" Click="CreatePrintoutData_Click"/>
 					<Button Content="Иконка" Grid.Column="6" Width="133" Height="39"/>
 					<Button Content="Иконка" Grid.Column="4" Width="133" Height="39"/>
 				</Grid>
