Сделал добавление данных в таблицу с созданием заявки

--- a/Request Refill/Windows/WindowCreateRequestRefill.xaml
+++ b/Request Refill/Windows/WindowCreateRequestRefill.xaml
@@ -202,7 +202,7 @@
 					<DataGridTextColumn Header="Дата" 
                         Binding="{Binding Date, StringFormat=d, UpdateSourceTrigger=PropertyChanged}"/>
 					<DataGridTextColumn Header="Страниц" 
-                        Binding="{Binding NumberOfPages, UpdateSourceTrigger=PropertyChanged}"/>
+                        Binding="{Binding CountPages, UpdateSourceTrigger=PropertyChanged}"/>
 				</DataGrid.Columns>
 			</DataGrid>
 
