--- a/Request Refill/Windows/WindowTraySelectFuntion.xaml
+++ b/Request Refill/Windows/WindowTraySelectFuntion.xaml
@@ -5,13 +5,30 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Request_Refill.Windows"
         mc:Ignorable="d"
-        Title="WindowTraySelectFuntion" SizeToContent="WidthAndHeight">
-    <Border Background="White" CornerRadius="10" Padding="20">
-        <StackPanel>
-            <TextBlock Text="Создание завязки на заправку" FontSize="16" Margin="0,0,0,20"/>
-            <Button Content="Настройки" Margin="0,5"/>
-            <Button Content="Закрыть программу" Margin="0,5"/>
-            <Button Content="Печать" Margin="0,5"/>
-        </StackPanel>
+		WindowStyle="None" 
+		Background="{x:Null}" 
+		
+        SizeToContent="WidthAndHeight" AllowsTransparency="True" MouseLeave="Window_MouseLeave">
+	<Border Background="White" CornerRadius="32" Margin="20,20,20,30" >
+		<Border.Effect>
+			<DropShadowEffect Direction="270" Opacity="0.25" Color="#000000" BlurRadius="20" ShadowDepth="10"/>
+		</Border.Effect>
+		<Grid>
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition/>
+				<ColumnDefinition/>
+				<ColumnDefinition/>
+			</Grid.ColumnDefinitions>
+			<Grid.RowDefinitions>
+				<RowDefinition/>
+				<RowDefinition/>
+			</Grid.RowDefinitions>
+
+			<Button Content="Замена картриджа" Width="119" Height="132" Grid.Column="0" Grid.RowSpan="2" Margin="8,8,4,8"/>
+			<Button Content="Создание заявки" Width="119" Height="132" Grid.Column="1" Grid.RowSpan="2" Margin="4,8,4,8" Click="OpenCreateRequestRefill_Click"/>
+			<Button Content="Настр" Width="62" Height="62" Grid.Column="2" Grid.Row="0" Margin="4,8,8,4" Click="OpenSettings_Click"/>
+			<Button Content="Выкл" Width="62" Height="62" Grid.Column="3" Grid.Row="1" Margin="4,4,8,8" Click="Shutdown_Click"/>
+
+		</Grid>
     </Border>
 </Window>
