--- a/Request Refill/Windows/WindowCreateRequestRefill.xaml
+++ b/Request Refill/Windows/WindowCreateRequestRefill.xaml
@@ -188,7 +188,7 @@
 				</Grid>
 			</Border>
 
-			<DataGrid Grid.Row="1" Margin="10" Name="DataGridListOfPrintedDocument" AutoGenerateColumns="False" IsReadOnly="True" 
+			<DataGrid Grid.Row="1" Margin="10" Name="DataGridListOfPrintedDocument" AutoGenerateColumns="False" IsReadOnly="True" HorizontalAlignment="Center" 
 					  CanUserReorderColumns="False"
 					  CanUserResizeColumns="False"
 					  CanUserSortColumns="False"
@@ -217,7 +217,7 @@
 						<ColumnDefinition Width="auto"/>
 					</Grid.ColumnDefinitions>
 
-					<Button Style="{DynamicResource ButtonSaveStyle}" Content="Подтвердить" Width="133" Height="39" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="0" FontFamily="{StaticResource Tex Gyre}" FontSize="16"/>
+					<Button Style="{DynamicResource ButtonSaveStyle}" Content="Подтвердить" Width="133" Height="39" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="0" FontFamily="{StaticResource Tex Gyre}" FontSize="16" Click="SaveRequestRefill_Click"/>
 					<Button Style="{DynamicResource ButtonCancelStyle}" Content="Отмена" Width="133" Height="39" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="2" FontFamily="{StaticResource Tex Gyre}" FontSize="16" Click="ClickCloseWindow"/>
 					<Button Content="Добавить запись" Grid.Column="8" Width="133" Height="39" Click="CreatePrintoutData_Click"/>
 					<Button Content="Изменить" Grid.Column="6" Width="133" Height="39" Click="ChangePrintoutData_Click"/>
