--- a/Request Refill/Windows/WindowCreateRequestRefill.xaml
+++ b/Request Refill/Windows/WindowCreateRequestRefill.xaml
@@ -188,19 +188,36 @@
 				</Grid>
 			</Border>
 
-			<DataGrid Grid.Row="1" Margin="10" Name="DataGridListOfPrintedDocument" AutoGenerateColumns="False" IsReadOnly="True" HorizontalAlignment="Center" 
-					  CanUserReorderColumns="False"
-					  CanUserResizeColumns="False"
-					  CanUserSortColumns="False"
-					  CanUserResizeRows="False"
-					  SelectionMode="Single">
-				<DataGrid.Columns>
-					<DataGridTextColumn Header="#" Binding="{Binding Number}" />
-					<DataGridTextColumn Header="Название" Binding="{Binding NameDocument}"/>
-					<DataGridTextColumn Header="Дата" Binding="{Binding Date, StringFormat=dd.MM.yy}"/>
-					<DataGridTextColumn Header="Страниц" Binding="{Binding CountPages}"/>
-				</DataGrid.Columns>
-			</DataGrid>
+			<Grid Grid.Row="1" VerticalAlignment="Stretch">
+				<Grid.RowDefinitions>
+					<RowDefinition/>
+					<RowDefinition Height="auto"/>
+				</Grid.RowDefinitions>
+				
+				
+				<DataGrid Margin="10" Grid.Row="0" Name="DataGridListOfPrintedDocument" AutoGenerateColumns="False" IsReadOnly="True" HorizontalAlignment="Center" InitializingNewItem="DataGridListOfPrintedDocument_InitializingNewItem"
+					CanUserReorderColumns="False"
+					CanUserResizeColumns="False"
+					CanUserSortColumns="False"
+					CanUserResizeRows="False"
+					SelectionMode="Single">
+					<DataGrid.Columns>
+						<DataGridTextColumn Header="#" Binding="{Binding Number}" />
+						<DataGridTextColumn Header="Название" Binding="{Binding NameDocument}"/>
+						<DataGridTextColumn Header="Дата" Binding="{Binding Date, StringFormat=dd.MM.yy}"/>
+						<DataGridTextColumn Header="Страниц" Binding="{Binding CountPages}"/>
+					</DataGrid.Columns>
+				</DataGrid>
+				<Grid HorizontalAlignment="Center" Grid.Row="1">
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition/>
+						<ColumnDefinition/>
+					</Grid.ColumnDefinitions>
+					
+					<TextBlock Grid.Column="0" Text="Итого" Margin="8"/>
+					<TextBlock Grid.Column="1" Text="95" Margin="8" Name="Textblock_SumPagesPrintouts"/>
+				</Grid>
+			</Grid>
 
 
 			<Border Grid.Row="2" BorderThickness="0,1,0,0" BorderBrush="#6980f7">
