--- a/Request Refill/Windows/WindowCreateRequestRefill.xaml
+++ b/Request Refill/Windows/WindowCreateRequestRefill.xaml
@@ -195,7 +195,7 @@
 				</Grid.RowDefinitions>
 				
 				
-				<DataGrid Margin="10" Grid.Row="0" Name="DataGridListOfPrintedDocument" AutoGenerateColumns="False" IsReadOnly="True" HorizontalAlignment="Center" InitializingNewItem="DataGridListOfPrintedDocument_InitializingNewItem"
+				<DataGrid Margin="10" Grid.Row="0" Name="DataGridListOfPrintedDocument" AutoGenerateColumns="False" IsReadOnly="True" HorizontalAlignment="Center"
 					CanUserReorderColumns="False"
 					CanUserResizeColumns="False"
 					CanUserSortColumns="False"
