--- a/Request Refill/Windows/WindowSettings.xaml
+++ b/Request Refill/Windows/WindowSettings.xaml
@@ -12,140 +12,6 @@
 		Background="{x:Null}" 
 		SizeToContent="WidthAndHeight" Title="Настройки"
 		>
-	<Window.Resources>
-		<Style x:Key="FocusVisual">
-			<Setter Property="Control.Template">
-				<Setter.Value>
-					<ControlTemplate>
-						<Rectangle Margin="2" StrokeDashArray="1 2" Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" SnapsToDevicePixels="true" StrokeThickness="1"/>
-					</ControlTemplate>
-				</Setter.Value>
-			</Setter>
-		</Style>
-		<SolidColorBrush x:Key="Button.Static.Background" Color="#6980f7"/>
-		<SolidColorBrush x:Key="Button.MouseOver.Background" Color="#3b62ed"/>
-		<SolidColorBrush x:Key="Button.Pressed.Background" Color="#1946bb"/>
-
-		<Style x:Key="ButtonCloseStyle" TargetType="{x:Type Button}">
-			<Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}"/>
-			<Setter Property="Background" Value="{StaticResource Button.Static.Background}"/>
-			<Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
-			<Setter Property="BorderThickness" Value="0"/>
-			<Setter Property="HorizontalContentAlignment" Value="Center"/>
-			<Setter Property="VerticalContentAlignment" Value="Center"/>
-			<Setter Property="Padding" Value="1"/>
-			<Setter Property="Template">
-				<Setter.Value>
-					<ControlTemplate TargetType="{x:Type Button}">
-						<Border x:Name="border" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" SnapsToDevicePixels="true" CornerRadius="0,16,0,0">
-							<ContentPresenter x:Name="contentPresenter" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
-						</Border>
-						<ControlTemplate.Triggers>
-							<Trigger Property="IsDefaulted" Value="true">
-								<Setter Property="BorderBrush" TargetName="border" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
-							</Trigger>
-							<Trigger Property="IsMouseOver" Value="true">
-								<Setter Property="Background" TargetName="border" Value="{StaticResource Button.MouseOver.Background}"/>
-							</Trigger>
-							<Trigger Property="IsPressed" Value="true">
-								<Setter Property="Background" TargetName="border" Value="{StaticResource Button.Pressed.Background}"/>
-							</Trigger>
-						</ControlTemplate.Triggers>
-					</ControlTemplate>
-				</Setter.Value>
-			</Setter>
-		</Style>
-		<Style x:Key="FocusVisual1">
-			<Setter Property="Control.Template">
-				<Setter.Value>
-					<ControlTemplate>
-						<Rectangle Margin="2" StrokeDashArray="1 2" Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" SnapsToDevicePixels="true" StrokeThickness="1"/>
-					</ControlTemplate>
-				</Setter.Value>
-			</Setter>
-		</Style>
-		<SolidColorBrush x:Key="Button.Static.Background1" Color="#6980f7"/>
-		<SolidColorBrush x:Key="Button.MouseOver.Background1" Color="#1946bb"/>
-		<SolidColorBrush x:Key="Button.Pressed.Background1" Color="#0a358a"/>
-		<Style x:Key="ButtonSaveStyle" TargetType="{x:Type Button}">
-			<Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual1}"/>
-			<Setter Property="Background" Value="{StaticResource Button.Static.Background1}"/>
-			<Setter Property="Foreground" Value="#FFFFFF"/>
-			<Setter Property="HorizontalContentAlignment" Value="Center"/>
-			<Setter Property="VerticalContentAlignment" Value="Center"/>
-			<Setter Property="Padding" Value="1"/>
-			<Setter Property="Template">
-				<Setter.Value>
-					<ControlTemplate TargetType="{x:Type Button}">
-						<Border x:Name="border" Background="{TemplateBinding Background}" SnapsToDevicePixels="true" CornerRadius="8">
-							<ContentPresenter x:Name="contentPresenter" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
-						</Border>
-						<ControlTemplate.Triggers>
-							<Trigger Property="IsDefaulted" Value="true">
-								<Setter Property="BorderBrush" TargetName="border" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
-							</Trigger>
-							<Trigger Property="IsMouseOver" Value="true">
-								<Setter Property="Background" TargetName="border" Value="{StaticResource Button.MouseOver.Background1}"/>
-							</Trigger>
-							<Trigger Property="IsPressed" Value="true">
-								<Setter Property="Background" TargetName="border" Value="{StaticResource Button.Pressed.Background1}"/>
-							</Trigger>
-						</ControlTemplate.Triggers>
-					</ControlTemplate>
-				</Setter.Value>
-			</Setter>
-		</Style>
-		<Style x:Key="FocusVisual2">
-			<Setter Property="Control.Template">
-				<Setter.Value>
-					<ControlTemplate>
-						<Rectangle Margin="2" StrokeDashArray="1 2" Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" SnapsToDevicePixels="true" StrokeThickness="1"/>
-					</ControlTemplate>
-				</Setter.Value>
-			</Setter>
-		</Style>
-		<SolidColorBrush x:Key="Button.Static.Background2" Color="#c5c8ff"/>
-		<SolidColorBrush x:Key="Button.MouseOver.Background2" Color="#98a2fd"/>
-		<SolidColorBrush x:Key="Button.Pressed.Background2" Color="#6980f7"/>
-		<Style x:Key="ButtonCancelStyle" TargetType="{x:Type Button}">
-			<Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual2}"/>
-			<Setter Property="Background" Value="{StaticResource Button.Static.Background2}"/>
-			<Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
-			<Setter Property="HorizontalContentAlignment" Value="Center"/>
-			<Setter Property="VerticalContentAlignment" Value="Center"/>
-			<Setter Property="Padding" Value="1"/>
-			<Setter Property="Template">
-				<Setter.Value>
-					<ControlTemplate TargetType="{x:Type Button}">
-						<Border x:Name="border" Background="{TemplateBinding Background}" SnapsToDevicePixels="true" CornerRadius="8">
-							<ContentPresenter x:Name="contentPresenter" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
-						</Border>
-						<ControlTemplate.Triggers>
-							<Trigger Property="IsDefaulted" Value="true">
-								<Setter Property="BorderBrush" TargetName="border" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
-							</Trigger>
-							<Trigger Property="IsMouseOver" Value="true">
-								<Setter Property="Background" TargetName="border" Value="{StaticResource Button.MouseOver.Background2}"/>
-							</Trigger>
-							<Trigger Property="IsPressed" Value="true">
-								<Setter Property="Background" TargetName="border" Value="{StaticResource Button.Pressed.Background2}"/>
-							</Trigger>
-						</ControlTemplate.Triggers>
-					</ControlTemplate>
-				</Setter.Value>
-			</Setter>
-		</Style>
-		<Style x:Key="FocusVisual3">
-			<Setter Property="Control.Template">
-				<Setter.Value>
-					<ControlTemplate>
-						<Rectangle Margin="2" StrokeDashArray="1 2" Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" RadiusX="4" RadiusY="4" SnapsToDevicePixels="true" StrokeThickness="1"/>
-					</ControlTemplate>
-				</Setter.Value>
-			</Setter>
-		</Style>
-
-	</Window.Resources>
 
 	<Border Background="White" CornerRadius="16" Width="480" Height="343" Margin="20,20,20,30" RenderTransformOrigin="0.5,0.5">
 		<Border.RenderTransform>
@@ -178,10 +44,10 @@
 
 
 					<Border Grid.Column="1" BorderThickness="0,4,0,0" BorderBrush="#3b62ed" HorizontalAlignment="Left" Padding="10,0,10,4">
-						<TextBlock Grid.Column="1" Text="Настройки" FontSize="24" FontFamily="{StaticResource Tex Gyre}" TextAlignment="Center" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+						<TextBlock Grid.Column="1" Text="Настройки" FontSize="24" FontFamily="{StaticResource Proletarsk}" TextAlignment="Center" VerticalAlignment="Center" HorizontalAlignment="Center"/>
 					</Border>
 
-					<Button Style="{DynamicResource ButtonCloseStyle}" Grid.Column="3" Click="ClickCloseWindow">
+					<Button Grid.Column="3" Click="ClickCloseWindow">
 						<Image Source="/Resources/32/X.png" Width="32"/>
 					</Button>
 				</Grid>
@@ -198,24 +64,24 @@
 						<ColumnDefinition/>
 						<ColumnDefinition/>
 					</Grid.ColumnDefinitions>
-					<TextBlock Grid.Column="0" Text="Кабинет" FontSize="16" FontFamily="{StaticResource Tex Gyre}" VerticalAlignment="Center"/>
-					<ComboBox Style="{DynamicResource ComboBoxStyle}" Grid.Column="1" Width="200" Height="32" Name="ComboboxCabinetSelect" FontFamily="{StaticResource Tex Gyre}" FontSize="16" DisplayMemberPath="CabinetName" SelectedValuePath="CabinetID"/>
+					<TextBlock Grid.Column="0" Text="Кабинет" FontSize="16" FontFamily="{StaticResource Proletarsk}" VerticalAlignment="Center"/>
+					<ComboBox Grid.Column="1" Width="200" Height="32" Name="ComboboxCabinetSelect" FontFamily="{StaticResource Proletarsk}" FontSize="16" DisplayMemberPath="CabinetName" SelectedValuePath="CabinetID"/>
 				</Grid>
 				<Grid Margin="10" Grid.Row="1">
 					<Grid.ColumnDefinitions>
 						<ColumnDefinition/>
 						<ColumnDefinition/>
 					</Grid.ColumnDefinitions>
-					<TextBlock Grid.Column="0" FontSize="16" FontFamily="{StaticResource Tex Gyre}" VerticalAlignment="Center"><Run Text="От кого "/><Run Language="ru-ru" Text="делать заявку"/></TextBlock>
-					<ComboBox  Style="{DynamicResource ComboBoxStyle}" Grid.Column="1" Width="200" Height="32" Name="ComboboxFromWhoDefaultSelect" FontFamily="{StaticResource Tex Gyre}" FontSize="16" DisplayMemberPath="FIO" SelectedValuePath="EmployeeID"/>
+					<TextBlock Grid.Column="0" FontSize="16" FontFamily="{StaticResource Proletarsk}" VerticalAlignment="Center"><Run Text="От кого "/><Run Language="ru-ru" Text="делать заявку"/></TextBlock>
+					<ComboBox  Grid.Column="1" Width="200" Height="32" Name="ComboboxFromWhoDefaultSelect" FontFamily="{StaticResource Proletarsk}" FontSize="16" DisplayMemberPath="FIO" SelectedValuePath="EmployeeID"/>
 				</Grid>
 				<Grid Margin="10" Grid.Row="2">
 					<Grid.ColumnDefinitions>
 						<ColumnDefinition/>
 						<ColumnDefinition/>
 					</Grid.ColumnDefinitions>
-					<TextBlock Grid.Column="0" Text="Принтер" FontSize="16" FontFamily="{StaticResource Tex Gyre}" VerticalAlignment="Center"/>
-					<ComboBox Style="{DynamicResource ComboBoxStyle}" Grid.Column="1" Width="200" Height="32" Name="ComboboxPrinterDefaultSelect" FontFamily="{StaticResource Tex Gyre}" FontSize="16" DisplayMemberPath="PrinterInfo" SelectedValuePath="PrinterID"/>
+					<TextBlock Grid.Column="0" Text="Принтер" FontSize="16" FontFamily="{StaticResource Proletarsk}" VerticalAlignment="Center"/>
+					<ComboBox Grid.Column="1" Width="200" Height="32" Name="ComboboxPrinterDefaultSelect" FontFamily="{StaticResource Proletarsk}" FontSize="16" DisplayMemberPath="PrinterInfo" SelectedValuePath="PrinterID"/>
 				</Grid>
 			</Grid>
 			
@@ -229,8 +95,8 @@
 						<ColumnDefinition/>
 					</Grid.ColumnDefinitions>
 
-					<Button Style="{DynamicResource ButtonSaveStyle}" Content="Сохранить" Width="117" Height="39" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" FontFamily="{StaticResource Tex Gyre}" FontSize="16" Click="SaveSettings_Click"/>
-					<Button Style="{DynamicResource ButtonCancelStyle}" Content="Отмена" Width="117" Height="39" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="3" FontFamily="{StaticResource Tex Gyre}" FontSize="16" Click="ClickCloseWindow"/>
+					<Button Content="Сохранить" Width="117" Height="39" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" FontFamily="{StaticResource Proletarsk}" FontSize="16" Click="SaveSettings_Click"/>
+					<Button Content="Отмена" Width="117" Height="39" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="3" FontFamily="{StaticResource Proletarsk}" FontSize="16" Click="ClickCloseWindow"/>
 				</Grid>
 			</Border>
 		</Grid>
