--- a/Request Refill/Windows/WindowSettings.xaml
+++ b/Request Refill/Windows/WindowSettings.xaml
@@ -12,6 +12,11 @@
 		Background="{x:Null}" 
 		SizeToContent="WidthAndHeight" Title="Настройки"
 		>
+	<Window.Resources>
+		<FontFamily x:Key="Proletarsk">
+			pack://application:,,,/Fonts/Proletarsk.ttf#Proletarsk
+		</FontFamily>
+	</Window.Resources>
 
 	<Border Background="White" CornerRadius="16" Width="480" Height="343" Margin="20,20,20,30" RenderTransformOrigin="0.5,0.5">
 		<Border.RenderTransform>
