--- a/Request Refill/Windows/WindowTraySelectFuntion.xaml
+++ b/Request Refill/Windows/WindowTraySelectFuntion.xaml
@@ -6,29 +6,28 @@
         xmlns:local="clr-namespace:Request_Refill.Windows"
         mc:Ignorable="d"
 		WindowStyle="None" 
-		Background="{x:Null}" 
+		Background="{x:Null}"
+		ShowInTaskbar="False"
+		Title="Request Refill"
+		Topmost="True"
 		
         SizeToContent="WidthAndHeight" AllowsTransparency="True" MouseLeave="Window_MouseLeave">
 	<Border Background="White" CornerRadius="32" Margin="20,20,20,30" >
 		<Border.Effect>
 			<DropShadowEffect Direction="270" Opacity="0.25" Color="#000000" BlurRadius="20" ShadowDepth="10"/>
 		</Border.Effect>
-		<Grid>
-			<Grid.ColumnDefinitions>
-				<ColumnDefinition/>
-				<ColumnDefinition/>
-				<ColumnDefinition/>
-			</Grid.ColumnDefinitions>
-			<Grid.RowDefinitions>
-				<RowDefinition/>
-				<RowDefinition/>
-			</Grid.RowDefinitions>
+		<StackPanel Margin="8">
 
-			<Button Content="Замена картриджа" Width="119" Height="132" Grid.Column="0" Grid.RowSpan="2" Margin="8,8,4,8" Click="OpenReplaceCartridge"/>
-			<Button Content="Создание заявки" Width="119" Height="132" Grid.Column="1" Grid.RowSpan="2" Margin="4,8,4,8" Click="OpenCreateRequestRefill_Click"/>
-			<Button Content="Настр" Width="62" Height="62" Grid.Column="2" Grid.Row="0" Margin="4,8,8,4" Click="OpenSettings_Click"/>
-			<Button Content="Выкл" Width="62" Height="62" Grid.Column="3" Grid.Row="1" Margin="4,4,8,8" Click="Shutdown_Click"/>
+			<Button Content="Замена картриджа" Width="364" Height="60" Click="OpenReplaceCartridge"/>
+			<Rectangle Height="10"/>
+			<Button Content="Создание заявки" Width="364" Height="60" Click="OpenCreateRequestRefill_Click"/>
+			<Rectangle Height="10"/>
+			<Button Content="Настройки" Width="364" Height="60" Click="OpenSettings_Click"/>
+			<Rectangle Height="10"/>
+			<Button Content="О программе" Width="364" Height="60"/>
+			<Rectangle Height="10"/>
+			<Button Content="Закрыть Request Refill" Width="364" Height="60" Click="Shutdown_Click"/>
 
-		</Grid>
+		</StackPanel>
     </Border>
 </Window>
