--- a/Request Refill/SetupWizardSettingsPages/SetupWizardSettings_Page3.xaml
+++ b/Request Refill/SetupWizardSettingsPages/SetupWizardSettings_Page3.xaml
@@ -1,11 +1,13 @@
-﻿<Page x:Class="Request_Refill.Pages.SetupWizardSettings_Page1"
+﻿<Page x:Class="Request_Refill.SetupWizardSettingsPages.SetupWizardSettings_Page3"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Request_Refill.Pages"
+      xmlns:local="clr-namespace:Request_Refill.SetupWizardSettingsPages"
       mc:Ignorable="d" 
-      Title="FirstSetupSettings_Page1">
+      d:DesignWidth="640"
+      Title="Укажите принтер">
+
 	<Page.Resources>
 		<FontFamily x:Key="Proletarsk">
 			pack://application:,,,/Fonts/Proletarsk.ttf#Proletarsk
@@ -17,16 +19,11 @@
 			<RowDefinition Height="76"/>
 		</Grid.RowDefinitions>
 
-		<Grid Grid.Row="0">
-			<Grid.RowDefinitions>
-				<RowDefinition/>
-				<RowDefinition/>
-			</Grid.RowDefinitions>
-
-			<TextBlock Grid.Row="0" Text="Кабинет" FontSize="24" FontFamily="{StaticResource Proletarsk}"/>
-			<ComboBox  Grid.Row="1" Name="Combobox_SelectCabinet"/>
-
-		</Grid>
+		<StackPanel Margin="32,18,32,32">
+			<TextBlock Grid.Row="0" Text="Принтер" FontSize="24" FontFamily="{StaticResource Proletarsk}"/>
+			<Rectangle Height="16"/>
+			<ComboBox  Grid.Row="1" Name="Combobox_SelectPrinter" FontSize="24" FontFamily="{StaticResource Proletarsk}"/>
+		</StackPanel>
 		<Grid Grid.Row="1" Margin="8">
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition Width="auto"/>
@@ -34,10 +31,8 @@
 				<ColumnDefinition Width="auto"/>
 			</Grid.ColumnDefinitions>
 
-			<Button Width="207" Height="60" FontFamily="{StaticResource Proletarsk}" FontSize="24" Grid.Column="0" Content="Отмена" Background="#ed3b62"/>
-			<Button Width="207" Height="60" FontFamily="{StaticResource Proletarsk}" FontSize="24" Grid.Column="2" Content="Дальше" Background="#3b62ed"/>
+			<Button Width="207" Grid.Column="0" Content="Назад"/>
+			<Button Width="207" Grid.Column="2" Content="Завершить" Style="{StaticResource AcceptButton}"/>
 		</Grid>
-
-
 	</Grid>
 </Page>
