--- a/InkTrack Report/App.xaml
+++ b/InkTrack Report/App.xaml
@@ -38,6 +38,16 @@
 			<Setter Property="FontSize" Value="24"/>
 			<Setter Property="FontFamily" Value="{StaticResource Proletarsk}"/>
 			<Setter Property="Foreground" Value="#000000"/>
+			<Setter Property="BorderBrush" Value="#3b62ed"/>
+			<Setter Property="Background" Value="#ffffff"/>
+		</Style>
+		
+		<Style TargetType="TextBox">
+			<Setter Property="Height" Value="48"/>
+			<Setter Property="FontSize" Value="24"/>
+			<Setter Property="FontFamily" Value="{StaticResource Proletarsk}"/>
+			<Setter Property="Foreground" Value="#000000"/>
+			<Setter Property="BorderBrush" Value="#3b62ed"/>
 			<Setter Property="Background" Value="#ffffff"/>
 		</Style>
 
