--- a/InkTrack Report/Windows/Dialog/AdminAuthDialog.xaml
+++ b/InkTrack Report/Windows/Dialog/AdminAuthDialog.xaml
@@ -5,27 +5,62 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:InkTrack_Report.Windows.Dialog"
         mc:Ignorable="d"
-        Title="AdminAuthDialog" Height="450" Width="800">
-	<Grid Margin="10">
-		<Grid.RowDefinitions>
-			<RowDefinition Height="Auto"/>
-			<RowDefinition Height="Auto"/>
-			<RowDefinition Height="Auto"/>
-			<RowDefinition Height="*"/>
-			<RowDefinition Height="Auto"/>
-		</Grid.RowDefinitions>
+        Title="AdminAuthDialog"
+		WindowStyle="None"
+		AllowsTransparency="True"
+		Background="Transparent"
+		WindowStartupLocation="CenterScreen" 
+		SizeToContent="WidthAndHeight"
+		ResizeMode="NoResize">
+	<Window.Resources>
+		<FontFamily x:Key="Proletarsk">
+			pack://application:,,,/Fonts/Proletarsk.ttf#Proletarsk
+		</FontFamily>
+	</Window.Resources>
+	<Border Background="White" CornerRadius="20" Width="484" Height="auto" Margin="20,20,20,30">
+		<Border.Effect>
+			<DropShadowEffect Direction="270" Opacity="0.25" Color="#000000" BlurRadius="20" ShadowDepth="10"/>
+		</Border.Effect>
 
-		<TextBlock Grid.Row="0" Text="Введите учетные данные администратора:" Margin="0,0,0,10"/>
 
-		<Label Grid.Row="1" Content="Имя пользователя:"/>
-		<TextBox Grid.Row="1" x:Name="UsernameTextBox" Margin="80,0,0,0"/>
 
-		<Label Grid.Row="2" Content="Пароль:"/>
-		<PasswordBox Grid.Row="2" x:Name="PasswordBox" Margin="80,0,0,10"/>
+		<Grid>
+			<Grid.RowDefinitions>
+				<RowDefinition/>
+				<RowDefinition Height="76"/>
+			</Grid.RowDefinitions>
 
-		<StackPanel Grid.Row="4" Orientation="Horizontal" HorizontalAlignment="Right">
-			<Button Content="OK" Width="80" Margin="0,0,10,0" Click="OkButton_Click"/>
-			<Button Content="Отмена" Width="80" Click="CancelButton_Click"/>
-		</StackPanel>
-	</Grid>
+			<StackPanel Grid.Row="0" Margin="32">
+
+				<StackPanel>
+					<TextBlock FontSize="24" FontFamily="{StaticResource Proletarsk}" Text="Логин"/>
+					<Rectangle Height="8"/>
+					<TextBox FontFamily="{StaticResource Proletarsk}" Name="Textbox_Login"/>
+				</StackPanel>
+				<Rectangle Height="16"/>
+				<StackPanel>
+					<TextBlock FontSize="24" FontFamily="{StaticResource Proletarsk}" Text="Пароль" />
+					<Rectangle Height="8"/>
+					<PasswordBox FontFamily="{StaticResource Proletarsk}" Name="Passwordbox_Password"/>
+				</StackPanel>
+			</StackPanel>
+
+			<Grid Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center">
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition/>
+					<ColumnDefinition Width="8"/>
+					<ColumnDefinition/>
+				</Grid.ColumnDefinitions>
+
+				<Button Grid.Column="0" Style="{StaticResource AcceptButton}" Width="230" Click="Accept_Click" Name="Button_Accept">
+					<Button.Content>
+						<TextBlock Text="Подтвердить"/>
+					</Button.Content>
+				</Button>
+				<Button Grid.Column="2" Content="Отмена" Style="{StaticResource CancelButton}" Width="230" Click="Cancel_Click" Name="Button_Cancel"/>
+			</Grid>
+
+		</Grid>
+
+	</Border>
 </Window>
