Подправил дилоговое окно с подтверждением, теперь оно реагирует и на доменные учетные записи

--- a/InkTrack Report/Windows/ReplaceCartridge.xaml
+++ b/InkTrack Report/Windows/ReplaceCartridge.xaml
@@ -107,8 +107,8 @@
 					<ColumnDefinition/>
 				</Grid.ColumnDefinitions>
 
-				<Button Grid.Column="0" Content="Сохранить" FontFamily="{StaticResource Proletarsk}" Background="#FF3BED62" Width="207" Height="60" FontSize="24" Click="Save_Click"/>
-				<Button Grid.Column="2" Content="Отмена" FontFamily="{StaticResource Proletarsk}" Background="#FFED3B62" Width="207" Height="60" FontSize="24" Click="Cancel_Click" Foreground="white"/>
+				<Button Grid.Column="0" Content="Сохранить" FontFamily="{StaticResource Proletarsk}" Width="207" Style="{StaticResource AcceptButton}" Click="Save_Click"/>
+				<Button Grid.Column="2" Content="Отмена" FontFamily="{StaticResource Proletarsk}" Width="207" Style="{StaticResource CancelButton}" Click="Cancel_Click"/>
 
 			</Grid>
 
