Поменял название окна по требованиям

--- a/InkTrack Report/Windows/CreateRequestRefill.xaml
+++ b/InkTrack Report/Windows/CreateRequestRefill.xaml
@@ -45,7 +45,7 @@
 
 				<Rectangle Grid.ColumnSpan="2" Fill="Transparent" Panel.ZIndex="1" Name="PanelDrag" MouseDown="PanelDrag_MouseDown"/>
 				
-				<TextBlock Text="Создание заявки на заправку" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="16,0,16,0" FontFamily="{StaticResource Proletarsk}"/>
+				<TextBlock Text="Печатная форма заявки" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="16,0,16,0" FontFamily="{StaticResource Proletarsk}"/>
 				<Button Grid.Column="2" Margin="8,8,0,8" Width="40" Height="40" Background="#FF3B62ED">
 					<Button.Content>
 						<Image Source="/Resources/24/Help circle.png" Width="24" />
