--- a/InkTrack Report/App.xaml
+++ b/InkTrack Report/App.xaml
@@ -7,20 +7,21 @@
 		<FontFamily x:Key="Proletarsk">
 			pack://application:,,,/Fonts/Proletarsk.ttf#Proletarsk
 		</FontFamily>
+		<SolidColorBrush Color="#3B62ED" x:Key="DefaultColor"/>
 
 
 		<Style TargetType="Button">
+
+			
+
 			<Setter Property="Height" Value="60"/>
 			<Setter Property="FontSize" Value="24"/>
 			<Setter Property="FontFamily" Value="{StaticResource Proletarsk}"/>
 			<Setter Property="Foreground" Value="#ffffff"/>
-			<Setter Property="Background" Value="#3b62ed"/>
+			<Setter Property="Background" Value="{StaticResource DefaultColor}"/>
 			<Setter Property="BorderThickness" Value="0"/>
-			<Style.Resources>
-				<Style TargetType="Border">
-					<Setter Property="CornerRadius" Value="12"/>
-				</Style>
-			</Style.Resources>
+
+
 		</Style>
 
 		<Style TargetType="Button" x:Key="CancelButton">
@@ -77,6 +78,5 @@
 			<Setter Property="BorderBrush" Value="#3b62ed"/>
 			<Setter Property="Background" Value="#ffffff"/>
 		</Style>
-
 	</Application.Resources>
 </Application>
